dnl -*- Mode: Autoconf; tab-width: 4; indent-tabs-mode: nil; -*-
dnl vi: set tabstop=4 shiftwidth=4 expandtab syntax=m4:
dnl This Source Code Form is subject to the terms of the Mozilla Public
dnl License, v. 2.0. If a copy of the MPL was not distributed with this
dnl file, You can obtain one at http://mozilla.org/MPL/2.0/.

AC_PREREQ(2.13)
AC_INIT(TeXZilla, 0.9.7)
AC_CONFIG_SRCDIR(TeXZilla.jison)

AC_CHECK_PROGS(BASH, bash)
AC_CHECK_PROGS(CLOSURE_COMPILER, closure-compiler)
AC_CHECK_PROGS(COMMONJS, nodejs node phantomjs slimerjs)
AC_CHECK_PROGS(CURL, curl)
AC_CHECK_PROGS(EGREP, egrep)
AC_CHECK_PROGS(GIT, git)
AC_CHECK_PROGS(JISON, jison)
AC_CHECK_PROGS(KILL, kill)
AC_CHECK_PROGS(MAKE, make)
AC_CHECK_PROGS(NPM, npm)
AC_CHECK_PROGS(PKILL, pkill)
AC_CHECK_PROGS(PYTHON, python)
AC_CHECK_PROGS(SED, sed)
AC_CHECK_PROGS(XSLTPROC, xsltproc)
AC_CHECK_PROGS(ZIP, zip)

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
